--- a/css/style.css
+++ b/css/style.css
@@ -9682,3 +9682,7 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+
+    .ftco-about{
+      background-color: rgb(16 14 14);
+    }
