--- a/css/style.css
+++ b/css/style.css
@@ -9686,3 +9686,8 @@ textarea.form-control {
     .ftco-about{
       background-color: rgb(16 14 14);
     }
+    @media (min-width: 576px) {
+    .no-image-mbl{
+      display: none;
+    }
+  }
