--- a/css/style.css
+++ b/css/style.css
@@ -9687,8 +9687,8 @@ textarea.form-control {
       background-color: rgb(16 14 14);
     }
 BODY,HTML{
-  width: 100vw;
-  height:100%;
+  width: 100vw !important;
+  height:100% !important;
   overflow-x: hidden;
   overflow-y: auto !important;
 }
