--- a/css/style.css
+++ b/css/style.css
@@ -9694,10 +9694,10 @@ BODY,HTML{
 @media (max-width: 576px)  {
   .owl-carousel.home-slider {
     position: relative;
-    height: 700px!important;
+    height: 110vw!important;
     z-index: 0;
 }
 .owl-carousel.home-slider .slider-item .slider-text .one-forth {
-  top:-119px !important
+  top:-229px !important
 }
 }
