--- a/css/style.css
+++ b/css/style.css
@@ -8817,7 +8817,7 @@ h1, h2, h3, h4, h5,
     text-transform: uppercase; }
 
 .services-1 {
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
   padding: 2em;
   background: rgba(255, 255, 255, 0.1);
   width: 100%;
@@ -9082,8 +9082,8 @@ textarea.form-control {
 
 .ftco-footer {
   font-size: 16px;
-  background: #000000;
-  padding: 7em 0;
+  background-color: rgb(16 14 14);;
+  padding: 4em 0;
   z-index: 0; }
   .ftco-footer .ftco-footer-logo {
     text-transform: uppercase;
@@ -9726,4 +9726,15 @@ BODY,HTML{
   pointer-events: none !important;
   z-index: 1000;
   position: relative;
+}
+@media (max-width: 768px)  {
+.services-1 {
+  margin-bottom: 40px;
+
+}
+}
+@media (min-width: 991px)  {
+.email_text{
+  padding-left: 26px;
+}
 }
